# LMDBArchive

./: .gitignore  CMakeLists.txt  lmdb_archive_implementation_plan.md
docs/: lmdb_single_file_library_guidelines.md
src/app/: AppController.cpp  AppController.h  ShellIntegration.cpp  ShellIntegration.h  main.cpp
src/cli/: CliCommands.cpp  CliCommands.h  CliMain.cpp
src/core/: ArchiveLock.cpp  ArchiveLock.h  ArchiveTypes.h  FileSystemUtil.cpp  FileSystemUtil.h  HashUtil.cpp  HashUtil.h  MetaCodec.cpp  MetaCodec.h  PathUtil.cpp  PathUtil.h
src/lmdb/: LmdbArchive.cpp  LmdbArchive.h  LmdbEnv.cpp  LmdbEnv.h
src/model/: ArchiveTreeBuilder.cpp  ArchiveTreeBuilder.h  ArchiveTreeNode.cpp  ArchiveTreeNode.h  EntryTableModel.cpp  EntryTableModel.h  FolderTreeModel.cpp  FolderTreeModel.h
src/ui/: ExtractDialog.cpp  ExtractDialog.h  MainWindow.cpp  MainWindow.h  PreviewPane.cpp  PreviewPane.h  ProgressDialog.cpp  ProgressDialog.h  PropertiesDialog.cpp  PropertiesDialog.h  StatsDialog.cpp  StatsDialog.h
src/worker/: CreateArchiveWorker.cpp  CreateArchiveWorker.h  ExtractWorker.cpp  ExtractWorker.h  PreviewDecodeWorker.cpp  PreviewDecodeWorker.h  VerifyWorker.cpp  VerifyWorker.h
tests/: test_archive_roundtrip.cpp  test_pathutil.cpp  test_single_file_mode.cpp  test_treebuilder.cpp  test_verify.cpp
